--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
-    "next": "14.2.3",
+    "lucide-react": "^0.510.0",
+    "next": "^14.2.28",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
