--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
